# Rubiks-Cube-Solver

./: CMakeLists.txt  README.md
headers/: color.h  imageProcessor.hpp  moves.h  rCube.h  rCube.hpp  rcube.h  solver.h  solver.hpp
src/: imageProcessor.cpp  main.cpp  rCube.cpp  rcube.cpp  solver.cpp
